# ShelfSense

./: .dockerignore  .env.example  .gitignore  CHOICES.md  CLAUDE.md  CURRENT_STATE.md  DEPLOY.md  DESIGN.md  README.md  docker-compose.yml  prompt.md  pyproject.toml  requirements-dev.txt
.claude/commands/: update-wiki.md
.github/workflows/: ci.yml
data/events/: behavior.jsonl
data/vlm/: demographics.json  store2_cache.json
docs/wiki/: API_SPEC.md  ARCHITECTURE.md  BUSINESS_RULES.md  DECISIONS.md  EDGE_CASES.md  EVENT_SCHEMA.md  GROUND_TRUTH.md  INTERVIEW_QA.md  PROJECT.md  README.md  RISKS.md  SPEC.md  STATE.md  TASKS.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: README.md  analyze_events.py  calibrate_entrance.py  calibrate_floor.py  calibrate_reid.py  crops_montage.py  demo_anomalies.py  demo_conversion.py  diagnose_tracks.py  emit_entrance_events.py  enrich_events_schema.py  evidence_visitors.py  extract_frames.py  ingest_events.py  load_pos.py  preview_detections.py  run_detection.py  store2_proof.py  validate_entrance.py
services/common/: pyproject.toml
services/common/shelfsense_common/: __init__.py  analytics.py  config.py  conversion.py  departments.py  logging.py  pos_loader.py  sinks.py  stream.py  worker.py
services/common/shelfsense_common/contracts/: __init__.py  behavior.py  events.py  pos.py  zones.py
services/common/shelfsense_common/stores/: README.md  __init__.py  st1008.py  st1009.py
tests/: README.md
(+92 files in other folders)
